data/derived/sp14/progs/unify/prog4506.ml.out
Characters 102-124:
  | h::t -> t, ((fst h + snd h) mod 10 :: snd a) in
                ^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type int but an expression was expected of type
         int * int
